<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="@drawable/bbb">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title -->
            <EditText
                android:id="@+id/noteTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/title"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:backgroundTint="@color/red" />

            <!-- Note Content -->
            <EditText
                android:id="@+id/noteContentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Note Content"
                android:padding="12dp"
                android:textSize="16sp"
                app:backgroundTint="@color/red"
                android:layout_marginBottom="16dp"/>

            <!-- Date -->
            <EditText
                android:id="@+id/noteDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/date"
                android:padding="12dp"
                android:textSize="16sp"
                app:backgroundTint="@color/red" />

            <!-- Buttons -->
            <Button
                android:id="@+id/saveNoteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/displayNoteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/display"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/updateNoteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/deleteNoteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!-- Output TextView to display notes -->
            <TextView
                android:id="@+id/noteDisplayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/notesdisplay"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>


